--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,13 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: unlimitedfocus # the main title
+title: luke # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: >- # used by seo meta and the atom feed
+  임시 페이지
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  임시 페이지
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
